refactor(database): change signature of enitites methods save all